NavBarCollapse - Fix for Bootstrap
This update resolves the Bootstrap-based transition between smaller->larger
viewport sizes for `.navbar-collapse`.

Since this component was designed to work with Bootstrap's JS, I've
implemented Bootstrap's solution.

https://github.com/twbs/bootstrap/blob/master/less/navbar.less#L68

Their solution was to "hard code" certain values at the `md` breakpoint
by using `!important`.

A test has been added to check for these values.

--- a/scss/pack/seed-navbar/components/_navbar-collapse.scss
+++ b/scss/pack/seed-navbar/components/_navbar-collapse.scss
@@ -11,8 +11,13 @@
       box-sizing: border-box;
       display: none;
 
+      // For Bootstrap
+      // https://github.com/twbs/bootstrap/blob/master/less/navbar.less#L68
       @include breakpoint(md) {
         display: block !important;
+        height: auto !important;
+        overflow: visible !important;
+        padding-bottom: 0; // Override default setting
       }
 
       // States
